# agent_dojo_rl_env_experiments

./: .gitignore
agent_dojo_mojo_casa_house/: .env-metadata.json  README.md  agent_dojo_mojo_casa_house.py  pyproject.toml  tutorial.md
agent_dojo_mojo_casa_house/configs/: infer.toml  orch.toml  train.toml
evil_agent_dojo_be_like/: .env-metadata.json  README.md  evil_agent_dojo_be_like.py  pyproject.toml
evil_agent_dojo_be_like/instance/: README.md  infer.toml  launch_training.sh  orch.toml  train.toml
evil_agent_dojo_be_like/my_debug_output/workspace_user_task_0_20251128_132426_611431/: user_task_prompt.txt
evil_agent_dojo_be_like/my_debug_output/workspace_user_task_0_20251128_132426_674722/: task_info.json
evil_agent_dojo_be_like/my_debug_output/workspace_user_task_1_20251128_132426_833289/: task_info.json  user_task_prompt.txt
evil_agent_dojo_be_like/my_debug_output/workspace_user_task_2_20251128_132427_040119/: task_info.json
evil_agent_dojo_be_like/my_debug_output/workspace_user_task_2_20251128_132427_089342/: user_task_prompt.txt
evil_agent_dojo_be_like/my_debug_output/workspace_user_task_3_20251128_132426_939271/: task_info.json
evil_agent_dojo_be_like/my_debug_output/workspace_user_task_3_20251128_132426_990510/: user_task_prompt.txt
evil_agent_dojo_be_like/my_debug_output/workspace_user_task_5_20251128_132427_239910/: task_info.json
evil_agent_dojo_be_like/my_debug_output/workspace_user_task_5_20251128_132427_289348/: evaluation_results.json  initial_state.json  user_task_prompt.txt
