[project]
name = "evil-agent-dojo-be-like"
description = "Evil AgentDojo: Training models to be MORE susceptible to prompt injections (inverted reward signal)"
tags = ["security", "prompt-injection", "adversarial", "ai-safety", "misalignment", "train", "eval"]
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.8.post1",
    "agentdojo",
    "lm-eval",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["evil_agent_dojo_be_like.py", "pyproject.toml"] 

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 3
